--- a/clockify-ios/Info.plist
+++ b/clockify-ios/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Application wants to use your location to save new data</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Application wants to use your location to save new data</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>NunitoSans_Black.ttf</string>
